--- a/canvas.html
+++ b/canvas.html
@@ -25,3 +25,17 @@
     </body>
 
 </html>
+<script>
+    class Ball{
+        constructor (x, y, dx, dy, 
+            radius,color) {
+                this.x=x;
+                this.y=y;
+                this.dx=dx;
+                this.dy=dy;
+                this.radius=radius;
+                this.color=color;
+
+            }
+        }
+        </script> 
