Implement draw method for Ball class

--- a/canvas.html
+++ b/canvas.html
@@ -25,6 +25,7 @@
     </body>
 
 </html>
+//Step 2
 <script>
     class Ball{
         constructor (x, y, dx, dy, 
@@ -39,3 +40,17 @@
             }
         }
         </script> 
+        //Step 3
+        <script>
+            Ball.prototype.draw =
+            function(ctx) {
+                ctx.beginPath();
+                ctz.arc(this.x, this.y,
+                    this.radius, 0, Math.PI * 2, false);
+                    ctx.fillstyle= this.color;
+                    ctx.fill();
+                    ctx.closePath();
+            }
+            </script>
+
+
