Add update method with collision         detection for Ball class

--- a/canvas.html
+++ b/canvas.html
@@ -40,7 +40,7 @@
             }
         }
         </script> 
-        //Step 3
+//Step 3
         <script>
             Ball.prototype.draw =
             function(ctx) {
@@ -52,5 +52,23 @@
                     ctx.closePath();
             }
             </script>
+//Step 4 
+        <script> 
+        Ball.prototype.update=
+        function(canvas) {
+            if (this.x + this.dx >
+                canvas.width - this.radius || this.x +
+                this.dx < this.radius ) {
+                    this.dx= -this.dx;
+                 }
+            if (this.y + this.dy >
+         canvas.height - this.radius || this.y 
+                + this.dy < this.radius) {
+                            this.dy = -this.dy;
+                }
+                this.x += this.dx;
+                this.y += this.dy;    
+        }
+        </script>     
 
 
